# AACS

./: .gitignore  CMakeLists.txt
AAClient/: CMakeLists.txt  main.cpp
AAServer/: CMakeLists.txt  main.cpp
AAServer/include/: ModeSwitcher.h
AAServer/src/: AaCommunicator.cpp  Gadget.cpp  InputChannelHandler.cpp  ModeSwitcher.cpp  Udc.cpp
GetEvents/: CMakeLists.txt
cmake/: TestLargeFiles.cmake
include/: config.h.in
proto/: CMakeLists.txt
src/: utils.cpp
